<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SnapnSell</string>
    <string name="action_settings">Settings</string>
    <string name="tvItem">Item:</string>
    <string name="tvDescription">Description:</string>
    <string name="tvPrice">Price:</string>
    <string name="tvLocation">Location:</string>
    <string name="btnSubmit">Submit</string>
    <string name="title_activity_login">Welcome to SnapnSell!</string>
    <string name="title_activity_filter">Filter Results</string>
    <string name="title_activity_marketplace">SnapnSell</string>
    <string name="login_btn_label">Sign in</string>
    <string name="filter_category_label">Category:</string>
    <string name="filter_location_label">Location:</string>
    <string name="filter_minprice_label">Min price</string>
    <string name="filter_maxprice_label">Max price</string>
    <string name="filter_isused_label">Used?</string>
    <string name="filter_save_btn">Save</string>
    <string name="searchview_query_hint">Search the marketplace</string>
    <string name="buy">Buy</string>
    <string name="used">Used:</string>
    <string name="confirm">Confirm</string>
    <string name="sell">Sell</string>
    <string name="title_activity_payment">Payment</string>
    <string name="expiration">Expiration:</string>
    <string name="card_number">Card Number:</string>
    <string name="purchase">Purchase</string>
    <string name="cvc">CVC:</string>
    <string name="title_activity_my_listing">My Listings</string>
    <string name="marketplace">Marketplace</string>
    <string name="myListing">My Listing</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_receipt">Receipt</string>
    <string name="tweet_your_purchase">Tweet your purchase!</string>
    <string name="confirm_your_listing">Confirm Your Listing</string>
    <string name="receipt">Receipt</string>
    <string name="create_a_listing">Create a Listing</string>
    <string name="title">Title:</string>
    <string name="filter_searchbox_desc">Search the marketplace</string>

</resources>
