<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

	<ImageView
			android:id="@+id/ivItemPic"
			android:layout_width="match_parent"
			android:layout_height="150dp"
			android:layout_alignParentLeft="true"
			android:layout_alignParentTop="true"
			android:src="@android:drawable/screen_background_light_transparent" />

	<TextView
			android:id="@+id/tvPrice"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/etDescription"
			android:layout_alignParentLeft="true"
			android:text="@string/tvPrice" />

	<EditText
			android:id="@+id/etPrice"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignTop="@+id/tvPrice"
			android:layout_toRightOf="@+id/tvDescription"
			android:ems="10"
			android:inputType="numberDecimal" />

	<TextView
			android:id="@+id/tvDescription"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_below="@+id/etTitle"
			android:text="@string/tvDescription" />

	<EditText
			android:id="@+id/etDescription"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignTop="@+id/tvDescription"
			android:layout_toRightOf="@+id/tvDescription"
			android:ems="10" />

	<TextView
	    android:id="@+id/tvLocation"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/etPrice"
	    android:text="@string/tvLocation" />

	<EditText
	    android:id="@+id/etLocation"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/etPrice"
	    android:layout_alignTop="@+id/tvLocation"
	    android:ems="10" />

	<TextView
	    android:id="@+id/tvTitle"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/ivItemPic"
	    android:layout_marginTop="5dp"
	    android:text="@string/title" />
	
	<EditText
	    android:id="@+id/etTitle"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignTop="@+id/tvTitle"
	    android:layout_toRightOf="@+id/tvDescription"
	    android:ems="10" />

	<TextView
	    android:id="@+id/tvUsed"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/etLocation"
	    android:text="@string/used" />

	<CheckBox
	    android:id="@+id/cbUsed"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignTop="@+id/tvUsed"
	    android:layout_toRightOf="@+id/tvDescription" />

</RelativeLayout>